--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
 
     .leaflet-popup-content a {
-      color: #019f8a;
+      color: #00bfa5;
       text-decoration: none;
       font-weight: bold;
     }
@@ -40,13 +40,14 @@
       right: 20px;         
       width: 270px;
       height: 285px;       
-      background-color: #79c5bb; 
+      background-color: #00bfa5; 
       padding: 20px;
       box-shadow: 2px 2px 10px rgba(0,0,0,0.3);
       border-radius: 25px;
       overflow-y: auto;
       z-index: 1000;
     }
+
 
     .nav {
       position: fixed;
@@ -75,8 +76,6 @@
     h2 {
       font-size: 18px;
     }
-
-
 
     .corner-button {
       position: fixed;
@@ -116,7 +115,7 @@
   <div id="map"></div>
 
   <div class="sidebar">
-    <h2>Directions & Notes</h2>
+    <h2 style="justify-self: center;">Directions & Notes</h2>
     <ul>
       <li>Hop on the Sunbury line from Flinder's Street Station.</li>
       <li>Begin exploring the locations from the first Pam on the East end and make your way towards the West.</li> 
