--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pam the Bird Trail</title>
+  <title>In Transit: Pam the Bird and the Reimagining of Industrial Space</title>
 
   <!-- Leaflet CSS and JS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
@@ -109,7 +109,7 @@
 
 <body>
   <div class="nav">
-    <h1>Spot the Pam</h1>
+    <h1>In Transit: Pam the Bird and the Reimagining of Industrial Space</h1>
   </div>
 
   <div id="map"></div>
